--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,10 @@
     margin-left: 25%;
     margin-top: 5%;
   }
-
+  .r-c p {
+    font-size: 19px;
+    color: var(--Dark-grayish-blue);
+  }
   .attribution {
     font-size: 13px;
     display: block;
